Re-enable mockito for 21